--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -47,8 +48,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.0.2"
   }
 }
